--- a/mingw-w64-otter-browser-git/PKGBUILD
+++ b/mingw-w64-otter-browser-git/PKGBUILD
@@ -16,7 +16,7 @@ _namesuffix="-git"
 _sourcedir=${_basename}-git
 pkgbase=mingw-w64-${_basename}${_namesuffix}
 pkgname=(${MINGW_PACKAGE_PREFIX}-${_basename}{,-nowebengine}${_namesuffix})
-pkgver=1.0.81.r8519.c0.g22fe47022
+pkgver=1.0.81.r8519.c1.g22fe47022
 pkgrel=1
 pkgdesc="Web browser aiming to recreate the best aspects of the classic Opera (12.x) UI using Qt5"
 arch=('any')
@@ -31,8 +31,12 @@ depends=(
 )
 makedepends=(${MINGW_PACKAGE_PREFIX}-cmake 'git')
 options=('strip' 'staticlibs')
-source=(${_sourcedir}::"git+https://github.com/OtterBrowser/otter-browser.git#branch=master")
-sha256sums=('SKIP')
+source=(
+  ${_sourcedir}::"git+https://github.com/OtterBrowser/otter-browser.git#branch=master"
+  001-Windows-comment-out-ddeexec.patch
+)
+sha256sums=('SKIP'
+            'bcf0250039b315835a6aa48d9ce31347daa33396030d84024e88abae70bce14a')
 
 # Declare global variables; begin with underscore to avoid name conflicts
 _git_base_commit=
@@ -40,7 +44,6 @@ _git_base_commit=
 pkgver() {
   cd ${srcdir}/${_sourcedir}
   _ver="$(cat CMakeLists.txt | grep -m3 -e MAJOR_VERSION -e MINOR_VERSION -e PATCH_VERSION | cut -d ')' -f1 | grep -o "[[:digit:]]*" | paste -sd'.')"
-  #echo "${_ver}.r$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
   printf "%s.r%s.c%s.g%s" "$_ver" $(git rev-list --count ${_git_base_commit}) $(git rev-list --count ${_git_base_commit}..HEAD) $(git rev-parse --short ${_git_base_commit})
 }
 
@@ -48,6 +51,13 @@ prepare() {
   cd ${srcdir}/${_sourcedir}
 
   _git_base_commit=$(git rev-parse HEAD)
+  
+  git config --local user.name  "nobody"
+  git config --local user.email "nobody@example.com"
+
+  GIT_AM="git am --committer-date-is-author-date"
+
+  ${GIT_AM} ${srcdir}/001-Windows-comment-out-ddeexec.patch
 }
 
 build() {
