--- a/mingw-w64-otter-browser-git/PKGBUILD
+++ b/mingw-w64-otter-browser-git/PKGBUILD
@@ -11,12 +11,19 @@
 # Normal 64 bit build command
 #   MINGW_INSTALLS=mingw64 makepkg-mingw -sLf
 
+_sourcepkgver=dev # values "dev", "branch", or package version ex. "1.0.01" 
+
 _basename=otter-browser
-_namesuffix="-git"
-_sourcedir=${_basename}-git
-pkgbase=mingw-w64-${_basename}${_namesuffix}
+if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+  _namesuffix="-git"
+  _sourcedir=${_basename}-git
+else
+  _namesuffix=
+  _sourcedir=${_basename}-${_sourcepkgver}
+fi
+pkgbase=mingw-w64-${_basename}
 pkgname=(${MINGW_PACKAGE_PREFIX}-${_basename}{,-nowebengine}${_namesuffix})
-pkgver=1.0.81.r8519.c1.g22fe47022
+pkgver=1.0.81.r8520.c1.g183e38c75
 pkgrel=1
 pkgdesc="Web browser aiming to recreate the best aspects of the classic Opera (12.x) UI using Qt5"
 arch=('any')
@@ -29,35 +36,71 @@ depends=(
  ${MINGW_PACKAGE_PREFIX}-qt5
  ${MINGW_PACKAGE_PREFIX}-qtwebkit
 )
-makedepends=(${MINGW_PACKAGE_PREFIX}-cmake 'git')
+makedepends=(${MINGW_PACKAGE_PREFIX}-cmake)
+if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+  makedepends+=('git')
+fi
 options=('strip' 'staticlibs')
-source=(
-  ${_sourcedir}::"git+https://github.com/OtterBrowser/otter-browser.git#branch=master"
+if [[ "$_sourcepkgver" = "dev" ]]; then
+  source=(${_sourcedir}::"git+https://github.com/OtterBrowser/otter-browser.git#branch=master")
+elif [[ "$_sourcepkgver" = "branch" ]]; then
+  source=(${_sourcedir}::"git+https://github.com/OtterBrowser/otter-browser.git#branch=1.0.xx")
+else
+  source=(${_sourcedir}.tar.gz::https://github.com/OtterBrowser/${_basename}/archive/v$_sourcepkgver.tar.gz)
+fi
+source+=(
   001-Windows-comment-out-ddeexec.patch
 )
-sha256sums=('SKIP'
-            'bcf0250039b315835a6aa48d9ce31347daa33396030d84024e88abae70bce14a')
+
+
+if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+  sha256sums=('SKIP')
+else
+  sha256sums=('85aef7c74277cf94de237e516c3c2d507b3d19b9ad16853de938540b8bf2f16b')
+fi
+sha256sums+=('bcf0250039b315835a6aa48d9ce31347daa33396030d84024e88abae70bce14a')
 
 # Declare global variables; begin with underscore to avoid name conflicts
-_git_base_commit=
+if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+  _git_base_commit=
+fi
+
+# Helper macros to help make tasks easier #
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+      git am --committer-date-is-author-date "${srcdir}/${_patch}"
+    else
+      msg2 "Applying ${_patch}"
+      patch -Nbp1 -i "${srcdir}/${_patch}"
+    fi
+  done
+}
 
 pkgver() {
   cd ${srcdir}/${_sourcedir}
   _ver="$(cat CMakeLists.txt | grep -m3 -e MAJOR_VERSION -e MINOR_VERSION -e PATCH_VERSION | cut -d ')' -f1 | grep -o "[[:digit:]]*" | paste -sd'.')"
-  printf "%s.r%s.c%s.g%s" "$_ver" $(git rev-list --count ${_git_base_commit}) $(git rev-list --count ${_git_base_commit}..HEAD) $(git rev-parse --short ${_git_base_commit})
+
+  if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+    printf "%s.r%s.c%s.g%s" "$_ver" $(git rev-list --count ${_git_base_commit}) $(git rev-list --count ${_git_base_commit}..HEAD) $(git rev-parse --short ${_git_base_commit})
+  else
+    printf "%s" "$_ver"
+  fi
 }
 
 prepare() {
   cd ${srcdir}/${_sourcedir}
 
-  _git_base_commit=$(git rev-parse HEAD)
+  if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+    _git_base_commit=$(git rev-parse HEAD)
   
-  git config --local user.name  "nobody"
-  git config --local user.email "nobody@example.com"
+    git config --local user.name  "nobody"
+    git config --local user.email "nobody@example.com"
+  fi
 
-  GIT_AM="git am --committer-date-is-author-date"
-
-  ${GIT_AM} ${srcdir}/001-Windows-comment-out-ddeexec.patch
+  apply_patch_with_msg \
+    001-Windows-comment-out-ddeexec.patch
 }
 
 build() {
@@ -107,7 +150,14 @@ _package_otter-browser-nowebengine() {
   echo 'X-AppStream-Ignore=true' >> "$pkgdir${MINGW_PREFIX}/share/applications/$pkgbase.desktop"
 }
 
-package_mingw-w64-i686-otter-browser-git() { _package_otter-browser; }
-package_mingw-w64-x86_64-otter-browser-git() { _package_otter-browser; }
-package_mingw-w64-i686-otter-browser-nowebengine-git() { _package_otter-browser-nowebengine; }
-package_mingw-w64-x86_64-otter-browser-nowebengine-git() { _package_otter-browser-nowebengine; }
+if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
+  package_mingw-w64-i686-otter-browser-git() { _package_otter-browser; }
+  package_mingw-w64-x86_64-otter-browser-git() { _package_otter-browser; }
+  package_mingw-w64-i686-otter-browser-nowebengine-git() { _package_otter-browser-nowebengine; }
+  package_mingw-w64-x86_64-otter-browser-nowebengine-git() { _package_otter-browser-nowebengine; }
+else
+  package_mingw-w64-i686-otter-browser() { _package_otter-browser; }
+  package_mingw-w64-x86_64-otter-browser() { _package_otter-browser; }
+  package_mingw-w64-i686-otter-browser-nowebengine() { _package_otter-browser-nowebengine; }
+  package_mingw-w64-x86_64-otter-browser-nowebengine() { _package_otter-browser-nowebengine; }
+fi
