--- a/mingw-w64-otter-browser-git/PKGBUILD
+++ b/mingw-w64-otter-browser-git/PKGBUILD
@@ -11,7 +11,7 @@
 # Normal 64 bit build command
 #   MINGW_INSTALLS=mingw64 makepkg-mingw -sLf
 
-_sourcepkgver=branch # values "dev", "branch", or package version ex. "1.0.01" 
+_sourcepkgver=dev # values "dev", "branch", or package version ex. "1.0.01"
 
 _basename=otter-browser
 if [[ "$_sourcepkgver" = "dev" || "$_sourcepkgver" = "branch" ]]; then
@@ -23,7 +23,7 @@ else
 fi
 pkgbase=mingw-w64-${_basename}
 pkgname=(${MINGW_PACKAGE_PREFIX}-${_basename}-nowebengine${_namesuffix})
-pkgver=1.0.01.r7581.c1.g830a982f4
+pkgver=1.0.81.r8520.c1.g183e38c75
 pkgrel=1
 pkgdesc="Web browser aiming to recreate the best aspects of the classic Opera (12.x) UI using Qt5"
 arch=('any')
