--- a/mingw-w64-wxWidgets2.8-git/PKGBUILD
+++ b/mingw-w64-wxWidgets2.8-git/PKGBUILD
@@ -26,7 +26,7 @@ conflicts=(
   "${MINGW_PACKAGE_PREFIX}-${_realname}${_wx_basever}"
   "${MINGW_PACKAGE_PREFIX}-${_basename}${_wx_basever}"
 )
-pkgver=2.8.12.0.r41651.0802369b36
+pkgver=2.8.12.0.v+199.c0.g0802369b36
 pkgrel=1
 pkgdesc="A C++ library that lets developers create applications for Windows, Linux and UNIX (mingw-w64)"
 arch=('any')
@@ -169,6 +169,11 @@ build() {
     --disable-mslu \
     --disable-precomp-headers \
     --with-msw \
+    --with-libpng=builtin \
+    --with-libjpeg=builtin \
+    --with-libtiff=builtin \
+    --with-zlib=builtin \
+    --with-expat=builtin \
     --with-opengl \
     --with-regex=builtin
 
