--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -9,7 +9,16 @@ _enable_ada=yes
 _enable_fortran=no
 _enable_objc=yes
 _enable_jit=yes
+
+_enable_3_stages=no
+
+if [[ "$MSYSTEM" == "UCRT64" ]]; then
+  # As of 2021-10-11 ucrt64 requires 3 stages to build without error
+  _enable_3_stages=yes
+fi
+
 _threads="posix"
+
 _realname=gcc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
@@ -205,6 +214,12 @@ build() {
     extra_config+=("--enable-libstdcxx-debug")
   fi
 
+  if [ "$_enable_3_stages" == "no" ]; then
+    extra_config+=("--disable-bootstrap")
+  elif [ "$_enable_3_stages" == "yes" ]; then
+    extra_config+=("--enable-bootstrap")
+  fi
+
   case "${CARCH}" in
     i686)
       local _conf="--disable-sjlj-exceptions --with-dwarf2"
@@ -246,7 +261,6 @@ build() {
     --target=${MINGW_CHOST} \
     --with-native-system-header-dir=${MINGW_PREFIX}/${MINGW_CHOST}/include \
     --libexecdir=${MINGW_PREFIX}/lib \
-    --enable-bootstrap \
     --enable-checking=release \
     --with-arch=${_arch} \
     --with-tune=generic \
@@ -259,7 +273,7 @@ build() {
     --enable-libstdcxx-filesystem-ts=yes \
     --enable-libstdcxx-time=yes \
     --disable-libstdcxx-pch \
-    ${extra_config} \
+    ${extra_config[@]} \
     --enable-lto \
     --enable-libgomp \
     --disable-multilib \
