--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -85,6 +85,7 @@ source=("https://ftp.gnu.org/gnu/gcc/${_realname}-${pkgver%%+*}/${_realname}-${p
         0203-backport-longjmp-fix.patch
         0204-Change-EH-pointer-encodings-to-PC-relative-on-Window.patch
         0205-x86-Add-include-gard-to-cpuid.h.patch)
+noextract=("${_sourcedir}.tar.xz")
 sha256sums=('64f404c1a650f27fc33da242e1f2df54952e3963a49e06e73f6940f3223ac344'
             'SKIP'
             'bce81824fc89e5e62cca350de4c17a27e27a18a1a1ad5ca3492aec1fc5af3234'
@@ -140,10 +141,21 @@ del_file_exists() {
     fi
   done
 }
+
+extract_gcc() {
+    if [ ! -d  "$_sourcedir" ]; then
+        echo "Extracting $_sourcedir.tar.xz into $_sourcedir"
+        mkdir -p "$_sourcedir"
+        tar --directory=$_sourcedir --strip-components=1 -xf "$_sourcedir.tar.xz"
+    fi
+}
 # =========================================== #
 
 
 prepare() {
+  cd ${srcdir}
+  extract_gcc
+
   cd ${srcdir}/${_sourcedir}
   del_file_exists intl/canonicalize.c intl/canonicalize.h \
     intl/relocatex.c intl/relocatex.h
