--- a/mingw-w64-gcc5-static/PKGBUILD
+++ b/mingw-w64-gcc5-static/PKGBUILD
@@ -14,7 +14,7 @@ _enable_fortran=no
 _enable_objc=no
 
 _enable_3_stages=no
-_enable_threads=no
+_enable_threads=yes
 _enable_graphite=yes
 _enable_system_mpc_mpfr_gmp_libs=no
 _enable_system_isl_lib=no
